--- a/SpringAssignment/BackEnd/pom.xml
+++ b/SpringAssignment/BackEnd/pom.xml
@@ -7,6 +7,8 @@
     <groupId>lk.ijse.spring</groupId>
     <artifactId>BackEnd</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
